
#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION ${CMAKE_MINIMUM_VERIONS})

#2. 确定工程名
PROJECT(ParserCTPOpt LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(SRC  
	${PROJECT_SOURCE_DIR}/ParserCTPOpt.cpp
	${PROJECT_SOURCE_DIR}/ParserCTPOpt.h
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

SET(LIBS
	Boost::filesystem
	Boost::thread
)

#9. 生成可执行文件
ADD_LIBRARY(ParserCTPOpt SHARED ${SRC})
TARGET_LINK_LIBRARIES(ParserCTPOpt PUBLIC ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(ParserCTPOpt PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

