
#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION ${CMAKE_MINIMUM_VERIONS})

#2. 确定工程名
PROJECT(ParserXTP LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(SRC  
	${PROJECT_SOURCE_DIR}/ParserXTP.cpp
	${PROJECT_SOURCE_DIR}/ParserXTP.h
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

SET(LIBS
	Boost::filesystem
)

ADD_LIBRARY(ParserXTP SHARED ${SRC})
TARGET_LINK_LIBRARIES(ParserXTP ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(ParserXTP PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

