
#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION ${CMAKE_MINIMUM_VERIONS})

#2. 确定工程名
PROJECT(TraderCTP LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(SRC  
	${PROJECT_SOURCE_DIR}/TraderCTP.cpp
	${PROJECT_SOURCE_DIR}/TraderCTP.h
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

ADD_LIBRARY(TraderCTP SHARED ${SRC})
SET(LIBS
	Boost::thread
	Boost::filesystem
)

TARGET_LINK_LIBRARIES(TraderCTP ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(TraderCTP PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

