#1. 确定CMake的最低版本需求
CMAKE_MINIMUM_REQUIRED(VERSION ${CMAKE_MINIMUM_VERIONS})

#2. 确定工程名
PROJECT(WtLatencyUFT LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin/WtLatencyUFT)

#7. 添加源码
file(GLOB SRCS *.cpp)
file(GLOB HDRS *.h)

IF(MSVC)
	list (APPEND SRCS ../Common/mdump.cpp)
ENDIF()

SET(LIBS
	WtUftCore
	WTSTools
    WTSUtils
	Boost::filesystem
	Boost::thread
	)

ADD_EXECUTABLE(WtLatencyUFT ${SRCS} ${HDRS})
TARGET_LINK_LIBRARIES(WtLatencyUFT ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(WtLatencyUFT PROPERTIES
        LINK_FLAGS_RELEASE -s)
ENDIF ()
